//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "Sample Project" {
  database_type: 'PostgreSQL'
  Note: ''
}

Table users {
  id String [pk]
  userName String [unique, not null]
  imageUrl String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table posts {
  id Int [pk, increment]
  title String [not null]
  content String [not null]
  authorId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table bookmarks {
  id Int [pk, increment]
  postId Int
  userId String [not null]
  createdAt DateTime [default: `now()`, not null]
}

Ref: posts.authorId > users.id [delete: Cascade]

Ref: bookmarks.postId > posts.id [delete: Set Null]

Ref: bookmarks.userId > users.id [delete: Cascade]